--- a/.github/workflows/windows-msys.yml
+++ b/.github/workflows/windows-msys.yml
@@ -88,32 +88,10 @@ jobs:
       env:
         DAILY_BUILD: 1
       run: ./ports/ci/windows-msys/deploy.sh
-    - name: VirusTotal Scan
-      uses: crazy-max/ghaction-virustotal@v4
+    - name: Release Upload
+      uses: actions/upload-artifact@v4.4.3
       if: ${{ matrix.upload }}
       with:
-        vt_api_key: ${{ secrets.VT_API_KEY }}
-        files: |
+        name: installer
+        path: |
           webcamoid-packages/windows-gcc-x86_64/*
-    - name: Release Upload
-      uses: softprops/action-gh-release@v1
-      if: ${{ startsWith(github.ref, 'refs/tags/') && matrix.upload }}
-      with:
-        repository: webcamoid/WebcamoidPrivate
-        files: |
-          webcamoid-packages/windows-gcc-x86_64/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
-    - name: Daily Build Upload
-      uses: softprops/action-gh-release@v1
-      if: ${{ !startsWith(github.ref, 'refs/tags/') && matrix.upload && github.ref == 'refs/heads/master' }}
-      with:
-        repository: webcamoid/WebcamoidPrivate
-        body: "${{ github.event.head_commit.message }} (commit: [${{ github.sha }}](https://github.com/webcamoid/webcamoid/commit/${{ github.sha }}))<hr>**Note**: Ignore the commit information of the tag, the files in the release keep updating with every new build, these packages were built from [${{ github.sha }}](https://github.com/webcamoid/webcamoid/commit/${{ github.sha }}) commit."
-        prerelease: true
-        files: |
-          webcamoid-packages/windows-gcc-x86_64/*
-        name: Daily Build
-        tag_name: daily-build
-      env:
-        GITHUB_TOKEN: ${{ secrets.UPLOAD_TOKEN }}
